src/main/java/com/example/webshop/models/errors/ErrorResponseModel.java
package com.example.webshop.models.errors;

public abstract class ErrorResponseModel {
}
